--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-navigation/drawer": "^6.6.6",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/bottom-tabs": "^7.9.0",
+    "@react-navigation/drawer": "^7.7.10",
+    "@react-navigation/native": "^7.1.26",
+    "@react-navigation/stack": "^7.1.0",
     "@reduxjs/toolkit": "^2.0.1",
     "expo": "~54.0.0",
     "expo-auth-session": "~7.0.10",
+    "expo-blur": "^15.0.8",
     "expo-crypto": "~15.0.8",
+    "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.10",
     "expo-linking": "~8.0.11",
     "expo-splash-screen": "~31.0.13",
