--- a/ios/SaiBabaMiracles/Info.plist
+++ b/ios/SaiBabaMiracles/Info.plist
@@ -34,6 +34,12 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
+          <string>com.googleusercontent.apps.646552958318-aukbcpnkl451p7vfcfc8g4p85e5f2l3j</string>
+        </array>
+      </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
           <string>exp+sai-baba-miracles</string>
         </array>
       </dict>
