--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-linking": "~8.0.11",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
     "firebase": "^10.7.1",
     "i18next": "^25.7.3",
